[gd_scene load_steps=12 format=3 uid="uid://c6gaa4kprawy0"]

[ext_resource type="Script" uid="uid://biopq2aedkgwh" path="res://scripts/npc.gd" id="1_4h4y0"]
[ext_resource type="Texture2D" uid="uid://barrcryhoe1ep" path="res://assets/Platformer Slimes v1.3/Ogre Slime Spritesheet.png" id="2_ahq63"]
[ext_resource type="PackedScene" uid="uid://l7oauc6tswy3" path="res://scenes/enemies/detection_radius.tscn" id="3_b58ev"]
[ext_resource type="PackedScene" uid="uid://c7lyw64bf4nfn" path="res://scenes/hurt_radius.tscn" id="4_b58ev"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbebl"]
size = Vector2(11, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h4y0"]
atlas = ExtResource("2_ahq63")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b58ev"]
atlas = ExtResource("2_ahq63")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ankfk"]
atlas = ExtResource("2_ahq63")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e12yk"]
atlas = ExtResource("2_ahq63")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhme6"]
atlas = ExtResource("2_ahq63")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhx0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h4y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b58ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ankfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e12yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhme6")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_4h4y0")
move_points = Array[Vector2]([Vector2(0, 0), Vector2(0, 0)])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_rbebl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uhx0m")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.10445527

[node name="Detection Radius" parent="." instance=ExtResource("3_b58ev")]

[node name="HurtRadius" parent="." instance=ExtResource("4_b58ev")]
script = null

[connection signal="body_entered" from="Detection Radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="Detection Radius" to="." method="_on_detection_radius_body_exited"]
[connection signal="body_entered" from="HurtRadius" to="." method="_on_hurt_radius_body_entered"]
